infra/kubernetes/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sea-animals-api-service
  labels:
    app: sea-animals-api-app
spec:
  type: ClusterIP
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: sea-animals-api-app
