infra/kubernetes/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sea-animals-api-ingress
spec:
  defaultBackend:
    service:
      name: sea-animals-api-service
      port:
        number: 8000
